Update loss and epoch statistics

--- a/FeedForwardNetwork.ipynb
+++ b/FeedForwardNetwork.ipynb
@@ -220,7 +220,7 @@
     "\n",
     "\n",
     "for e in range(epochs):\n",
-    "    #running_loss =0;\n",
+    "    running_loss =0;\n",
     "    for images,labels in iter(trainloader):\n",
     "        steps+=1\n",
     "        images.resize_(images.size()[0], 784)\n",
@@ -236,6 +236,13 @@
     "        optimizer.step()\n",
     "        #if steps%print_step==0:\n",
     "        #    print(\"Epoch->\",epochs)\n",
+    "        running_loss += loss.item()\n",
+    "        \n",
+    "        if steps % print_step == 0:\n",
+    "            print(\"Epoch: {}/{}... \".format(e+1, epochs),\n",
+    "                  \"Loss: {:.4f}\".format(running_loss/print_every))\n",
+    "            \n",
+    "            running_loss = 0\n",
     "print('Training Complete')"
    ]
   },
